--- a/ssjsgitkalpesh.html
+++ b/ssjsgitkalpesh.html
@@ -1,4 +1,4 @@
 <script runat="server">
 
-Platform.Response.Write('test from GIT Brendan');
+Platform.Response.Write('test from GIT Brendan the boss');
 </script>
